# compile-kernel

./: .gitignore  README.md  compile-kernel-9999.ebuild  pyproject.toml  setup.py  url.sh
compile_kernel/: .config  __init__.py  cli.py  compile_kernel.py  diffconfig.py
