[build-system]
requires = [
    "setuptools>=61.0",
    "tomlkit",
]
build-backend = "pep508_url_version_backend"
backend-path = [
    ".",
]

[project]
name = "compile_kernel"
version = "1!0.0.1761254946"
description = "Short explination of what it does _here_"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
license = "ISC"
dependencies = []
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/compile-kernel"

[project.scripts]
compile-kernel = "compile_kernel.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
compile_kernel = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = []
dependencies-git = [
    "asserttool @ git+https://git@github.com/jakeogh/asserttool",
    "click-auto-help @ git+https://git@github.com/jakeogh/click-auto-help",
    "clicktool @ git+https://git@github.com/jakeogh/clicktool",
    "eprint @ git+https://git@github.com/jakeogh/eprint",
    "getdents @ git+https://git@github.com/jakeogh/getdents",
    "globalverbose @ git+https://git@github.com/jakeogh/globalverbose",
    "pathtool @ git+https://git@github.com/jakeogh/pathtool",
    "hs @ git+https://git@github.com/jakeogh/hs",
    "with-chdir @ git+https://git@github.com/jakeogh/with-chdir",
]
index-urls = [
    "jakeogh.github.io",
    "pip-index",
]
