[build-system]
requires = [
    "setuptools>=61.0",
    "tomlkit",
]
build-backend = "pep508_url_version_backend"
backend-path = [
    ".",
]

[project]
name = "compile_kernel"
version = "1!0.0.1761639279"
description = "Compiles kernels with verified optons"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
license = "ISC"
dependencies = []
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/compile-kernel"

[project.scripts]
compile-kernel = "compile_kernel.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
compile_kernel = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = ["asserttool>=1!0.0.1761250315", "click-auto-help>=0.0.1761041641", "clicktool>=0.0.1761033403", "eprint>=1!0.0.1761259337", "globalverbose>=0.0.1761031290", "pathtool>=1!0.0.1761639272"]
dependencies-git = [
    "asserttool @ git+https://git@github.com/jakeogh/asserttool",
    "click-auto-help @ git+https://git@github.com/jakeogh/click-auto-help",
    "clicktool @ git+https://git@github.com/jakeogh/clicktool",
    "eprint @ git+https://git@github.com/jakeogh/eprint",
    "getdents @ git+https://git@github.com/jakeogh/getdents",
    "globalverbose @ git+https://git@github.com/jakeogh/globalverbose",
    "pathtool @ git+https://git@github.com/jakeogh/pathtool",
    "hs @ git+https://git@github.com/jakeogh/hs",
    "with-chdir @ git+https://git@github.com/jakeogh/with-chdir",
]
index-urls = [
    "jakeogh.github.io",
    "pip-index",
]
